# decorify

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  utils.py
.github/workflows/: python-app.yml  python-publish.yml  sphinx.yml
decorify/: __init__.py  base.py  basic.py  configuration.py  exceptions.py  io_redirect.py  iterative.py  profiling.py  tagging.py
decorify/configs/: config.json  config.txt
docs/source/: conf.py  index.rst  modules.rst  pydecorators.rst
docs/source/decorify/plot/: index.rst
pydecorators/: __init__.py  base.py  base_julian.py  base_log.py  basic.py  exception_handler.py  exceptions.py  iterative.py  plot.py  statistics.py
tests/: test_base.py  test_basic.py  test_configuration.py  test_exception_handler.py  test_exceptions.py  test_io_redirect.py  test_iterative.py  test_plot.py  test_profiling.py  test_statistics.py  test_tagging.py  text_exception_handler.py
